feat: add swagger to refresh handler
